- added hidden transition style for the ... test sample sections and paragraphs.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script defer src="app.js"></script>
   </head>
   <body>
-    <section>
+    <section class="hidden">
       <h1>What is Lorem Ipsum?</h1>
       <p>
         Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -26,7 +26,7 @@
       </p>
     </section>
 
-    <section>
+    <section class="hidden">
       <h1>Where does it come from?</h1>
       <p>
         Contrary to popular belief, Lorem Ipsum is not simply random text. It
@@ -43,6 +43,5 @@
         1.10.32.
       </p>
     </section>
-
   </body>
 </html>
