- added stack animation transformation style for.. a set of section images

--- a/index.html
+++ b/index.html
@@ -43,5 +43,40 @@
         1.10.32.
       </p>
     </section>
+
+    <section>
+      <h1>Aqualine Transformation!</h1>
+      <div class="logos">
+        <div class="logo hidden">
+          <img
+            src="https://www.kasandbox.org/programming-images/avatars/aqualine-seed.png"
+          />
+        </div>
+
+        <div class="logo hidden">
+          <img
+            src="https://www.kasandbox.org/programming-images/avatars/aqualine-seedling.png"
+          />
+        </div>
+
+        <div class="logo hidden">
+          <img
+            src="https://www.kasandbox.org/programming-images/avatars/aqualine-sapling.png"
+          />
+        </div>
+
+        <div class="logo hidden">
+          <img
+            src="https://www.kasandbox.org/programming-images/avatars/aqualine-tree.png"
+          />
+        </div>
+
+        <div class="logo hidden">
+          <img
+            src="https://www.kasandbox.org/programming-images/avatars/aqualine-ultimate.png"
+          />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
