--- a/index.html
+++ b/index.html
@@ -47,31 +47,31 @@
     <section>
       <h1>Aqualine Transformation!</h1>
       <div class="logos">
-        <div class="logo hidden">
+        <div class="logo hidden" style="--order: 1">
           <img
             src="https://www.kasandbox.org/programming-images/avatars/aqualine-seed.png"
           />
         </div>
 
-        <div class="logo hidden">
+        <div class="logo hidden" style="--order: 2">
           <img
             src="https://www.kasandbox.org/programming-images/avatars/aqualine-seedling.png"
           />
         </div>
 
-        <div class="logo hidden">
+        <div class="logo hidden" style="--order: 3">
           <img
             src="https://www.kasandbox.org/programming-images/avatars/aqualine-sapling.png"
           />
         </div>
 
-        <div class="logo hidden">
+        <div class="logo hidden" style="--order: 4">
           <img
             src="https://www.kasandbox.org/programming-images/avatars/aqualine-tree.png"
           />
         </div>
 
-        <div class="logo hidden">
+        <div class="logo hidden" style="--order: 5">
           <img
             src="https://www.kasandbox.org/programming-images/avatars/aqualine-ultimate.png"
           />
