- added a second delay transformation effect to be used for section child such as paragraphs. In this case the title of every section appears first and then followed by delayed transition of the the its paragraph.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <section class="hidden">
       <h1>What is Lorem Ipsum?</h1>
-      <p>
+      <p class="hidden-delay">
         Lorem Ipsum is simply dummy text of the printing and typesetting
         industry. Lorem Ipsum has been the industry's standard dummy text ever
         since the 1500s, when an unknown printer took a galley of type and
@@ -28,7 +28,7 @@
 
     <section class="hidden">
       <h1>Where does it come from?</h1>
-      <p>
+      <p class="hidden-delay">
         Contrary to popular belief, Lorem Ipsum is not simply random text. It
         has roots in a piece of classical Latin literature from 45 BC, making it
         over 2000 years old. Richard McClintock, a Latin professor at
